--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ body::after {
     background: rgba(255, 255, 255, 0.85);
     box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.15);
     /* border-radius: 24px; */
-    padding: 40px 32px;
+    padding: 0px 32px;
     max-width: 420px;
     width: 100%;
     text-align: center;
@@ -37,8 +37,8 @@ body::after {
 
 header h1 {
     font-family: 'Great Vibes', cursive;
-    font-size: 3.2rem;
-    margin-bottom: 0.1em;
+    font-size: 1.9rem;
+    margin-bottom: -120px;
     color: #b79b7e;
     letter-spacing: 1px;
     animation: fade-in 1.3s;
@@ -203,3 +203,17 @@ footer {
         margin-bottom: 0.7em;
     }
 }
+
+ @media (max-width: 600px) {
+            .header-responsive {
+                min-height: 280px !important;
+                padding: 1em 0.3em !important;
+                background-size: cover !important;
+            }
+            .header-responsive h1 {
+                font-size: 2.3em !important;
+            }
+            .header-responsive .amp {
+                font-size: 1.1em !important;
+            }
+        }
